# chempiler

./: .gitignore  README.md  chempiler_demo.ipynb  pyproject.toml
docs/: index.md
docs/tutorials/: 01_getting_started.md  02_composition.md  03_rdf.md  04_msd.md  05_segmentation.md  06_statistics.md  07_kinetics.md  08_hbond.md  09_adf.md  10_tetrahedral.md  11_vanhove.md  12_proton_hops.md  13_reactive_analysis.md  14_plotting.md
src/chempiler/: __init__.py  adf.py  cache.py  colours.py  companion.py  frame.py  hbond.py  kinetics.py  msd.py  perception.py  rdf.py  sdf.py  segmentation.py  selectors.py  sphere.py  state_engine.py  tetrahedral.py  trajectory.py  vanhove.py  vdos.py  view.py
src/chempiler/core/: state_field.py  statistics.py  tracker.py
tests/: rdf_test.py  test_adf.py  test_atom_hop.py  test_cache.py  test_frame.py  test_hbond.py  test_kinetics.py  test_msd.py  test_perception.py  test_rdf.py  test_segmentation.py  test_selectors.py  test_sphere.py  test_statistics.py  test_tetrahedral.py  test_tracker.py  test_trajectory.py  test_vanhove.py  x.py
tests/output/: H5O3_seg1_birth.xyz  H5O3_seg1_death.xyz  rdf_peak_0.970.xyz  rdf_peak_1.750.xyz  rdf_peak_3.250.xyz
