[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chempiler"
version = "0.1.0"
description = "Chemical perception and analysis engine for atomistic trajectories and structure databases"
authors = [{name="Viktor Svahn"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "ase",
    "h5py"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
